Autoversioning commit:  a non-deltaV client made a change to /trunk/lang/en_utf8/help/flv/flv_licence.html

--- a/lang/en_utf8/help/flv/flv_licence.html
+++ b/lang/en_utf8/help/flv/flv_licence.html
@@ -1,4 +1,4 @@
-<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/swf/icon.gif" />&nbsp;<b>JW FLV Player </b><strong>Licence</strong></p>
+<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/flv/icon.gif" />&nbsp;<b>JW FLV Player </b><strong>Licence</strong></p>
 <div class="indent">
   <p><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><strong>View Creative Commons non-commercial licence</strong></a></p>
   <p><a href="http://www.longtailvideo.com/players/order/license" target="_blank"><strong>Order a commercial licence from Jeroen Wijering</strong></a></p>
