Autoversioning commit:  a non-deltaV client made a change to /trunk/lang/en_utf8/help/flv/flv_help.html

--- a/lang/en_utf8/help/flv/flv_help.html
+++ b/lang/en_utf8/help/flv/flv_help.html
@@ -1,4 +1,4 @@
-<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/swf/icon.gif" />&nbsp;<b>JW FLV Player </b><strong>Parameters</strong></p>
+<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/flv/icon.gif" />&nbsp;<b>JW FLV Player </b><strong>Parameters</strong></p>
 <div class="indent">
 <p><strong>Supported variables for Flash (flashvars)</strong></p>
 <p>Here's a list of all flashvars the player uses. Check the <a href="http://developer.longtailvideo.com/trac/browser/trunk/as3/player.pdf" target="_blank">player setup PDF</a> for a one-page overview of all these flashvars. The setting of all these flashvars can be accessed by plugins/javascript through the view.config/player.getConfig() call <a href="http://developer.longtailvideo.com/trac/wiki/FlashAPI" target="_blank">of the API</a>.</p>
