Autoversioning commit:  a non-deltaV client made a change to /trunk/lang/en_utf8/help/flv/mods.html

--- a/lang/en_utf8/help/flv/mods.html
+++ b/lang/en_utf8/help/flv/mods.html
@@ -1,4 +1,4 @@
-<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/swf/icon.gif" />&nbsp;<b>FLV Player</b><strong> Activity Module</strong></p>
+<p><img alt="" src="<?php echo $CFG->wwwroot?>/mod/flv/icon.gif" />&nbsp;<b>FLV Player</b><strong> Activity Module</strong></p>
 <div class="indent">
 <p>The FLV Player Activity Module is comprehensive wizard for deploying Flash video as activities in Moodle courses. It allows users to set all of the parameters supported by Jeroen Wijering's FLV Player.</p>
 <p><strong><b>FLV Player</b><strong> Activity Module</strong> Developed by Matt Bury - <a href="http://matbury.com/">http://matbury.com/</a></strong></p>
